fix with the teacher and fixed the note from the teacher